--- a/movie.html
+++ b/movie.html
@@ -10,14 +10,15 @@
 </head>
 <style>
     .container-fluid{
-        margin-top: 100px;
-        width: 80%;
+        /* margin-top: 100px; */
+        width: 100%;
         background-color: #343a40;
     }
+    
 </style>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mx-sm-aut mx-md-auto mx-lg-auto h1">moviesApp</span>
+        <span class="navbar-brand mx-sm-aut mx-md-auto mx-lg-auto h1" style="font-size:30px;">MoviesApp</span>
     </nav>
 
     <div class="container-fluid">
